* Fix Bug('ARRAY_CONCAT_ARGUMENTS_BUGGY') detection and ensure Array#concat's replacement returns an array. [jddalton]

* Optimize Element#getOffsetParent by using the regexp case-insensitive flag instead of tagName.toLowerCase(). [jddalton]

* unit test: Add test to ensure Element#getOffsetParent doesn't raise an exception when called from the children of a document fragment. [jddalton]

* Simplify String#extractScripts and add a unit test to ensure empty scripts are not returned. [jddalton]

* Optimize Form/Field methods by replacing complex method calls with simple while-loops. [jddalton]

* Cleanup String#unescapeHTML and String#extractScripts' HTML comment matching regular expression. [jddalton]

* Cleanup Element._attributeTranslations.read.getEv(). [Andrew Dupont, jddalton]

* Renamed the PeriodicalExecuter class to Timer. [jddalton, Joe Gornick]
  - Changed "currentlyExecuting" property to "executing"
  - Changed "timer" property to "timerID"
  - Remove registerCallback method
  - Make onTimerEvent private
  - Remove auto-start on instance initialization.

* Cleanup and optimize the event system. [jddalton]
  - Reduce event cache complexity
  - Take more advantage of lazy defined methods
  - Add support for DOM Level 0 event management
  - Remove browser sniffs in mouse button detection
  - Auto clear window:load and dom:loaded event cache
  - Minor cleanup to the functional event.html

* Avoid IE element.style.cssText bug effecting hidden elements. [jddalton]
  Note: Accessing a hidden element's client/offset<dimension> properties before appending cssText will make the client/offset<dimension> values unchanged by the new style.

* Make Class constructors return the "initialize" method's return value. Closes #11481 [cch1]

* Make Event's private method isCssLoaded() fail when the "sheet" object of an element is null or undefined. [jddalton]
